# bittseeder

./: Cargo.toml  ICON_INSTALLATION.md  README.md  bittseeder.desktop  verify_pieces.py
.github/workflows/: all_build.yml
docker/: Dockerfile  build.bat
src/: main.rs
src/config/: files.rs  mod.rs
src/config/impls/: seeder_config.rs  torrents_config.rs
src/config/structs/: global_config.rs  seeder_config.rs  torrent_entry.rs
src/seeder/: seeder.rs
src/seeder/impls/: seeder.rs
src/seeder/structs/: torrent_registry.rs
src/torrent/: torrent.rs
src/torrent/impls/: torrent_builder.rs
src/torrent/structs/: torrent_info.rs
src/tracker/impls/: http_client.rs  udp_client.rs
src/web/: acme.rs  api.rs  app.js  index.html  mod.rs  server.rs  structs.rs  style.css
src/web/structs/: app_state.rs  upload_session.rs
tests/: test_config.rs  test_seed_protocol.rs  test_totp.rs
